--- a/Andrew/Testing/Flask/templates/index.html
+++ b/Andrew/Testing/Flask/templates/index.html
@@ -4,14 +4,17 @@
         <title>{{ title }} - Flew</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/flight_styles.css') }}" />
      </head>
-    <div class="form-style">
-        <form>
-            <fieldset>
-                <h1>Flew</h1>
-                <label for="flightNum"><span>Flight Number <span class="required"></span></span><input type="text" class="flightNum" name="flightNum" value="" /></label>
-                <label for="airline"><span>Airline <span class="required"></span></span><input type="text" class="airline" name="airline" value="" /></label>
-                <label><span> </span><input type="submit" value="Submit" /></label>
-            </fieldset>
-        </form>
-    </div>
+
+     <div class="form">
+         <h1>Flew</h1>
+         <form action="">
+            <label for="number">Flight Number</label>
+            <input type="text" id="number" name="flightnum">
+
+            <label for="airline">Airline</label>
+            <input type="text" id="airline" name="airline">
+
+            <input type="submit" value="Submit">
+         </form>
+     </div>
 </html>
