--- a/Andrew/Testing/Flask/templates/index.html
+++ b/Andrew/Testing/Flask/templates/index.html
@@ -1,5 +1,11 @@
 <!doctype html>
 <html>
+    <script>
+        function rando() {
+            document.getElementById("chance").innerHTML = Math.floor(Math.random() * 95) + 5;
+        }
+    </script>
+
     <head>
         <title>{{ title }} - Flew</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/flight_styles.css') }}" />
@@ -14,7 +20,13 @@
             <label for="airline">Airline</label>
             <input type="text" id="airline" name="airline">
 
-            <input type="submit" value="Submit">
+            <input type="button" onclick="rando()" value="Submit"></br></br>
+
+            <label type="text" id="output" name="output">Delay chance: </label>
+            <label type="text" id="chance" name="output"></label>
+
          </form>
      </div>
+
+
 </html>
